--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ springdoc.swagger-ui.urlsPrimaryName=Default
 spring.servlet.multipart.max-file-size= -1
 spring.servlet.multipart.max-request-size= -1
 
-spring.datasource.url=jdbc:mysql://localhost:3306/NetLoveSpring?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/AbandonSpring?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123123
 
